--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,5 +5,17 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
-      - run: docker pull php:8.3
+      - name: Create SSH key
+        run: |
+            mkdir -p ~/.ssh/
+            echo "$SSH_PRIVATE_KEY" > ../private.key
+            sudo chmod 600 ../private.key
+            echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
+        env:
+          SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
+          SSH_KNOWN_HOSTS: ${{secrets.SSH_KNOWN_HOSTS}}
+          SSH_KEY_PATH: ${{ github.workspace }}/../private.key
+        shell: bash
+      - name: test ssh connection
+        run: ssh docker-deploy@enlacebooking.travel "printenv"
         shell: bash
