--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,7 @@ jobs:
           SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
         shell: bash
       - name: test ssh connection
-        run: ssh docker-deploy@enlacebooking.travel "printenv"
+        run: docker ps
         shell: bash
+        env:
+          DOCKER_HOST: ${{secrets.DOCKER_HOST}}
