--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: harbor.enlacebooking.travel
-          username: ${{ vars.REGISTRY_USERNAME }}
+          username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
       - name: deploy docker compose file
         run: docker compose up -d
