--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,22 +5,12 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
-      - name: Create SSH key
-        run: |
-            install -m 600 -D /dev/null ~/.ssh/id_rsa
-            echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-            ssh-keyscan -H enlacebooking.travel > ~/.ssh/known_hosts
-        shell: bash
-      - name: checkout repository
-        uses: actions/checkout@v4
-      - name: Login to Registry
-        uses: docker/login-action@v3
+      - name: docker compose deploy
+        uses: Aldoggutierrez/hello-world-composite-action@94cd0fb2b60fe5341af0c5dcca05c2a7864e4223
         with:
-          registry: harbor.enlacebooking.travel
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
-      - name: deploy docker compose file
-        run: docker compose up -d
-        shell: bash
-        env:
-          DOCKER_HOST: ${{secrets.DOCKER_HOST}}
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          ssh-host: 'enlacebooking.travel'
+          registry-username: ${{ secrets.REGISTRY_USERNAME }}
+          registry-password: ${{ secrets.REGISTRY_PASSWORD }}
+          docker-host: ${{ secrets.DOCKER_HOST }}
+          pull-images: "true"
